* 2013-04-05 - thorben.betten@open-xchange.com

 - Fix for bug 25704: Dropped dependency

* 2013-04-05 - francisco.laguna@open-xchange.com

 - Fix for bug 25706: Fixed login

* 2013-04-04 - marcus.klein@open-xchange.com

 - Fix for bug 25330: Implemented conversion of reseller administrator, custom identifier and restrictions in reseller context SOAP
   interface.

* 2013-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 25684: Trying to avoid fragile JAF data-content-handler look-up where possible
 - Fix for bug 25126: Consider config-cascade setting when propagating capability

* 2013-04-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 25673: Be aware of possibly removed MBeans during iteration in showruntimestats

* 2013-04-03 - thorben.betten@open-xchange.com

 - Fix for bug 24989: Added mapping to config-tree <-> JSlob
 - Fix for bug 23383: Fixed response headers

* 2013-04-02 - thorben.betten@open-xchange.com

 - Fix for bug 25193: More lenient handling when creating mail accounts by auto-config settings

* 2013-04-02 - marcus.klein@open-xchange.com

 - Fix for bug 24581: Using only special Java options for CLTs in all scripts starting some CLT.
 - Fix for bug 25083: Not throwing nested exceptions to RMI clients because they do not know about internal exception classes.

* 2013-04-01 - thorben.betten@open-xchange.com

 - Fix for bug 25636: Limited changeable contact fields to reasonable ones

* 2013-03-30 - thorben.betten@open-xchange.com

 - Fix for bug 25630: Added proper "main" method to CLI classes
 - Fix for bug 25132: Set proper arguments for UploadSizeExceededException

* 2013-03-29 - dennis.sieben@open-xchange.com

 - Fix for bug 25626: Added admin id to admin user after creation in database

* 2013-03-28 - marcus.klein@open-xchange.com

 - Fix for bug 25099: Used strings from the XML schema elements needs to be interned when using IBM Java.

* 2013-03-28 - thorben.betten@open-xchange.com
